--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,6 @@ dependencies {
     compile 'com.google.android.gms:play-services:8.4.0'
 //    compile files('libs/Vuforia.jar')
     compile 'com.android.support:design:23.2.0'
+    compile 'com.jakewharton:butterknife:6.1.0'
+    compile 'com.android.volley:volley:1.0.0'
 }
