--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -26,7 +27,9 @@ dependencies {
     compile 'com.android.support:design:23.3.0'
     compile 'com.google.android.gms:play-services:8.4.0'
 //    compile files('libs/Vuforia.jar')
-    compile 'com.android.support:design:23.2.0'
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.android.volley:volley:1.0.0'
+    compile 'com.koushikdutta.ion:ion:2.+'
+    compile 'com.android.support:cardview-v7:23.3.0'
+    compile 'com.android.support:multidex:1.0.0'
 }
