--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <!-- new permissions -->
+    <!-- feed permission-->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <!-- end feed permission-->
 
 
     <!-- <permission -->
@@ -33,7 +36,9 @@
         android:icon="@drawable/splash"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:largeHeap="true"
+        android:theme="@style/AppTheme"
+        android:name="android.support.multidex.MultiDexApplication">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -60,6 +65,9 @@
             android:name="model.puzzlegame.GameActivity"
             android:label="@string/app_name"></activity>
         <activity android:name="model.puzzlegame.Game" />
+        <activity android:name="model.userData.Login" android:theme="@style/AppTheme.Dark" >
+        </activity>
+        <activity android:name="model.userData.Signup" android:theme="@style/AppTheme.Dark" />
 
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
