--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile 'com.koushikdutta.ion:ion:2.+'
     compile 'com.android.support:cardview-v7:23.3.0'
     compile 'com.android.support:multidex:1.0.0'
+    compile "com.android.support:support-v4:18.0.+"
 }
