--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
     <!-- end new permissions -->
     <application
         android:allowBackup="true"
-        android:icon="@drawable/applogo"
+        android:icon="@mipmap/applogo"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:largeHeap="true"
