--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,6 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.3.0'
     compile 'com.android.support:multidex:1.0.0'
     compile "com.android.support:support-v4:18.0.+"
+    compile 'com.android.support:recyclerview-v7:23.3.0'
+    compile 'com.mikhaellopez:circularimageview:3.0.2'
 }
